[package]
name = "table_view"
version = "0.1.0"
edition = "2021"
authors = ["febkor"]
description = "View tabular data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
egui_extras = "0.26.0"
env_logger = "0.10.0"
# https://docs.rs/polars/latest/polars/#compile-times
polars = { version = "0.34", features = ["lazy", "parquet", "avro", "dtype-full"] }


[profile.dev]
opt-level = 1
debug = 0
strip = true
